--- a/package.json
+++ b/package.json
@@ -9,19 +9,44 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^5.16.7",
+    "@mui/material": "^5.16.7",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.0",
+    "@rhinestone/module-sdk": "^0.1.8",
+    "@safe-global/protocol-kit": "^4.1.0-alpha.1",
+    "@safe-global/relay-kit": "^3.1.0-alpha.1",
+    "@tanstack/react-query": "^5.51.21",
+    "@web3modal/siwe": "^5.0.11",
+    "@web3modal/wagmi": "^5.0.11",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.428.0",
+    "next": "14.1.4",
+    "next-auth": "^4.24.7",
+    "permissionless": "^0.1.44",
+    "pino-pretty": "^11.2.2",
+    "react": "^18.3.1",
     "react-dom": "^18",
-    "next": "14.1.4"
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
+    "viem": "^2.17.11",
+    "wagmi": "^2.12.2"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.4"
+    "typescript": "^5"
   }
 }
